language/grammar/bytecode/test/corpus/operands.txt
==================================
Structured instruction operands
==================================

function dispatch {
    call.virtual r5, [0](r0:r2)
    switch r0 { 0 => b0, default => b1 }
b0:
    continuation.resume r7:r8, r9, r10:r11, r6, r5 => b2 | b3 | b4
}


---

(source_file
  (function_definition
    (function_keyword)
    (function_name)
    (instruction
      (opcode)
      (operands
        (register_identifier)
        (comma)
        (list
          (operands
            (integer_literal)))
        (tuple
          (operands
            (register_span
              (register_identifier)
              (colon)
              (register_identifier))))))
    (instruction
      (opcode)
      (operands
        (register_identifier)
        (block
          (operands
            (integer_literal)
            (fat_arrow)
            (label_identifier)
            (comma)
            (identifier)
            (fat_arrow)
            (label_identifier)))))
    (label
      (label_identifier)
      (colon))
    (instruction
      (opcode)
      (operands
        (register_span
          (register_identifier)
          (colon)
          (register_identifier))
        (comma)
        (register_identifier)
        (comma)
        (register_span
          (register_identifier)
          (colon)
          (register_identifier))
        (comma)
        (register_identifier)
        (comma)
        (register_identifier)
        (fat_arrow)
        (label_identifier)
        (pipe)
        (label_identifier)
        (pipe)
        (label_identifier)))))
